# uchat-client

./: CMakeLists.txt  Makefile  README.md  todo
inc/: gui_utils.h  uchat.h
inc/chat-socket/: array_list_utils.h  chat_socket.h  requests.h  responses.h
src/: gui_utils.c  main.c  uchat.c
src/chat-socket/: array_list_utils.c  chat_socket.c  requests.c  responses.c
